# inspirer-rs

./: .env  .gitignore  .gitmodules  Cargo.toml
examples/simple_application/: Cargo.toml
examples/simple_application/src/: lib.rs
inspirer-apps/inspirer-blog/: Cargo.toml
inspirer-apps/inspirer-blog/migrations/: 20211226130830_initialize_tables.down.sql  20211226130830_initialize_tables.up.sql
inspirer-apps/inspirer-blog/src/: app.rs  error.rs  lib.rs
inspirer-apps/inspirer-blog/src/app/controller/: content.rs
inspirer-apps/inspirer-blog/src/app/dao/: content.rs  mod.rs
inspirer-apps/inspirer-blog/src/app/model/: content.rs  content_body.rs  mod.rs
inspirer-apps/inspirer-blog/src/app/model/response/: content.rs
inspirer-auth-center/: Cargo.toml
inspirer-base/: Cargo.toml
inspirer-base/migrations/: 20220103024329_initialize_inspirer_base.down.sql  20220103024329_initialize_inspirer_base.up.sql
inspirer-base/src/: app.rs  lib.rs
inspirer-base/src/app/: route.rs
inspirer-base/src/app/controller/: auth.rs
inspirer-base/src/app/dao/: user.rs
inspirer-base/src/app/model/: mod.rs  user.rs
inspirer-base/src/app/model/object/: mod.rs
inspirer-base/src/app/model/object/request/: auth.rs
inspirer-base/src/app/model/object/response/: auth.rs
inspirer-base/src/app/model/object/service/: auth.rs
inspirer-base/src/app/service/: auth.rs
inspirer-common/: Cargo.toml
inspirer-common/src/: contracts.rs  error.rs  lib.rs  macros.rs
inspirer-core/: Cargo.toml
inspirer-core/src/: application.rs  config.rs  contracts.rs  dao.rs  error.rs  framework.rs  lib.rs  macros.rs
inspirer-core/src/framework/: app_manager.rs  component.rs
inspirer-core/src/framework/component/: config.rs  database.rs  environment.rs
src/: lib.rs  server.rs
src/app/: manager.rs
