[package]
name = "inspirer-rs"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    ".",
    "inspirer-core",
    "inspirer-base",
    "inspirer-apps/inspirer-blog",
    "examples/*"
]

[[bin]]
name = "inspirer"
path = "src/bin/inspirer.rs"

[dependencies]
anyhow = "1.0"
inspirer-core = {path = "inspirer-core"}
dotenv = "0.15"
env_logger = "0.9.0"
axum = "0.4.3"
log = {version = "0.4"}
tokio = {version = "1", features = ["macros", "rt"]}
clap = {version = "3", features = ["derive"]}