[package]
name = "inspirer-rs"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    ".",
    "inspirer-core",
    "inspirer-foundation",
    "inspirer-base",
]

[[bin]]
name = "inspirer"
path = "src/bin/inspirer.rs"

[dependencies]
anyhow = "1.0"
inspirer-core = {path = "inspirer-core"}
inspirer-foundation = {path = "inspirer-foundation"}
dotenv = "0.15"
env_logger = "0.9.0"
axum = "0.4.3"
log = {version = "0.4"}
tokio = {version = "1", features = ["macros", "rt", "rt-multi-thread", "time", "io-util"]}
clap = {version = "3", features = ["derive"]}
serde = {version = "1", features = ["derive"]}