[package]
name = "inspirer-rs"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    ".",
    "inspirer-core",
    "inspirer-foundation",
    "inspirer-base",
    "inspirer-auth-center",
    "inspirer-applications/*"
]

[[bin]]
name = "inspirer"
path = "src/bin/inspirer.rs"

[dependencies]
anyhow = "1.0.53"
inspirer-core = {path = "inspirer-core"}
inspirer-foundation = {path = "inspirer-foundation", features = ["app-ext"]}
dotenv = "0.15.0"
env_logger = "0.9.0"
axum = "0.4.5"
log = "0.4.14"
tokio = { version = "1.16.1", features = ["macros", "rt", "rt-multi-thread", "time", "io-util"] }
clap = { version = "3.0.14", features = ["derive"] }
serde = { version = "1.0.136", features = ["derive"] }
libloading = "0.7.3"
