[package]
name = "inspirer-base"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inspirer-core = {path = "../inspirer-core"}
sea-orm = {version = "^0", features = ["sqlx-mysql", "runtime-tokio-rustls", "macros"], default-features = false}