[package]
name = "inspirer-base"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
inspirer-core = {path = "../inspirer-core"}
serde = {version = "1", features = ["derive"]}
sea-orm = {version = "^0", features = ["sqlx-mysql", "runtime-tokio-rustls", "macros"], default-features = false}
pwhash = {version = "1"}
jsonwebtoken = {version = "7"}
chrono = {version = "0.4", features = ["serde"]}