[package]
name = "inspirer-core"
version = "0.1.0"
edition = "2021"

[dependencies]
libloading = "0.7"
thiserror = {version = "1"}
log = {version = "0.4"}
serde = {version = "1", features = ["derive"]}
serde_json = {version = "1"}
anyhow = {version = "1"}
sea-orm = {version = "^0", features = ["sqlx-mysql", "runtime-tokio-rustls", "macros"], default-features = false}
hyper = {version = "0.14"}
axum = {version = "0.4.3"}
async-trait = {version = "0.1.43"}